docs: Improve partitions-whatis and add write to disk sample